--- a/public/500.html
+++ b/public/500.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Error(500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .error-page {
     background-color: white;
     color: #2E2F30;
     text-align: center;
@@ -12,13 +12,14 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
+  .error-page div.dialog {
+    /* width: 95%;
     max-width: 33em;
-    margin: 4em auto 0;
+    margin: 4em auto 0; */
+    display: flex;
   }
 
-  .rails-default-error-page div.dialog > div {
+  /* .error-page div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -29,18 +30,26 @@
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  .rails-default-error-page img {
-    padding-top: 50px;
-  }
+  } */
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
+  .error-page h1 {
+    font-size: 75px;
+    color: #63AEF2;
     line-height: 1.5em;
+    text-align: center;
+    padding-left: 50px;
+    padding-top: 100px;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .error-page p {
+    font-size: 30px;
+  }
+
+  .error-page img {
+    margin-left: 100px;
+  }
+
+  /* .error-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -53,18 +62,18 @@
     border-top-color: #DADADA;
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+  } */
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="error-page">
   <!-- This file lives in public/500.html -->
-  <!-- <div class="dialog">
+  <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div> -->
-  <img src="giant-bomb.png" alt="eRror pic">
+      <h1>Oops! Don't be sad..</h1>
+      <p>It's just a 500 error!</p>
+      <p>The page you were looking for doesn't exist.</p>
+  </div>
+  <img src="error.png" alt="error pic">
 </body>
 </html>
